# sql-analyser

./: .coverage  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  SQL-ANALYSER-SPEC.md  pyproject.toml
.claude/: config.json
.claude/hooks/: tk-allowlist.sh
.github/: dependabot.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml  release.yml  security.yml
.tickets/: sa-03ux.md  sa-06ql.md  sa-0hcc.md  sa-0kit.md  sa-0ndu.md  sa-0nnp.md  sa-0r69.md  sa-11ii.md  sa-147b.md  sa-1vk3.md  sa-254s.md  sa-26na.md  sa-2g01.md  sa-2j56.md  sa-2oil.md  sa-2rds.md  sa-2uo3.md  sa-36l1.md  sa-3g3r.md  sa-3oal.md  sa-45rz.md  sa-4puf.md  sa-4s3b.md  sa-4v14.md  sa-59aj.md  sa-5a6p.md  sa-5fwj.md  sa-5gn6.md  sa-5hfa.md  sa-5yn9.md  sa-6dqk.md  sa-6qmx.md  sa-78mb.md  sa-7tcf.md  sa-8o0q.md  sa-8ywn.md  sa-9ekc.md  sa-9tta.md  sa-a9cl.md  sa-abv7.md  (+73 more)
docs/: DOMAIN-MODEL(proposed).md  DOMAIN-MODEL-PLAN.md  TEST-CASES.md
features/01-domain-model/: PRD.md  TICKETS.md  TODO.md
features/02-core-extraction/: PRD.md  TICKETS.md  TODO.md
features/03-relationships/: PRD.md  TODO.md
features/04-metrics/: PRD.md  TODO.md
features/05-rendering/: PRD.md  TODO.md
features/06-cicd-setup/: PRD.md  TODO.md
src/sql_analyser/: __init__.py  analyser.py  domain.py  metrics.py
src/sql_analyser/templates/: __init__.py  dbml.j2  markdown_report.j2  mermaid_erd.j2
tests/: conftest.py  test_domain_model.py  test_metrics.py  test_relationships.py  test_rendering.py  test_source_data_model.py
