[project]
name = "sql-analyser"
version = "0.1.0"
description = "Deterministic source data model extraction from SQL queries"
requires-python = ">=3.12"
dependencies = [
    "sqlglot>=26",
    "pydantic>=2",
    "jinja2>=3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sql_analyser"]

[tool.hatch.build.targets.editable]
packages = ["src/sql_analyser"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest-cov>=7.0.0",
]
